app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  font-family: Outfit;
}

html, body {
  max-width: 1440px;
  margin: 0 auto;
  padding: 0;
  box-sizing: border-box;
  width: 100%;
  overflow-x: hidden;
  height: 100%;
}

body {
  position: relative;
  background-size: 100% 100%;
  background-attachment: fixed;
  display: flex;
  flex-direction: column;
}

* {
  scroll-behavior: smooth;
}

